--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <script>
     window.$docsify = {
       name: 'advanced-java',
-      repo: 'doocs/advanced-java',
+      repo: 'royiwong/advanced-java',
       maxLevel: 3,
       auto2top: true,
       coverpage: true,
